--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,7 +1,8 @@
 FROM nginx:latest
 
-# RUN echo stream "stream {include /etc/nginx/conf.d/stream;}" >> /etc/nginx/nginx.conf
 COPY proxy.conf /etc/nginx/sites-available/default
 
+EXPOSE 2222
+EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
-# CMD ["cat", "/etc/nginx/nginx.conf"]
