--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -1,9 +1,4 @@
 http {
-    proxy_set_header   Host $host;
-    proxy_set_header   X-Real-IP $remote_addr;
-    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Host $server_name;
-    
     upstream ssh {
         server Hosting-SSH-Container:22;
     }
@@ -12,13 +7,24 @@ http {
         server Hosting-SSH-Container:80;
     }
 
+    client_max_body_size 50M;
+
+    proxy_set_header   Host $host;
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Host $server_name;
+
     server {
-        listen 2222;
+        listen 55238;
+        server_name container.mireu.xyz;
+        
         proxy_pass ssh;
     }
 
     server {
-        listen 80;
+        listen 40012;
+        server_name container.mireu.xyz;
+
         proxy_pass http;
     }
 }
