프로그래밍 언어 기본 설치 삭제

--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -6,20 +6,10 @@ RUN mkdir -p /run/sshd
 RUN dnf install -y sudo vim nano curl wget openssh-server
 
 # User Setup
-ENV USERID=Hosting
 RUN useradd -ms /bin/bash -d /home/Hosting Hosting
 RUN usermod -aG root Hosting
-RUN echo Hosting:${USERID} | chpasswd
+RUN echo Hosting:Hosting | chpasswd
 WORKDIR /home/Hosting
-
-# Python3 Install
-RUN dnf -y install python3 python3-pip
-
-# NodeJS Install
-RUN dnf -y install nodejs
-
-# CPP Install
-RUN dnf -y install gcc g++
 
 RUN dnf -y update && dnf -y upgrade
 
