Docker-compose 수정 및 Readme 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,19 +41,47 @@ services:
       - datebase_mysql
       - schema_redis
   
-  # fedora_ssh:
-  #   image: registry.gitlab.com/mireu-lab/docker-jupyter-container:containerjupyterfedora
-  #   restart: always
-  #   container_name: SSH-Fedora-Container
-  #   volumes:
-  #     - Container_SSH:/workspace
-  #   ports:
-  #     - "2203:22"
-  #   depends_on:
-  #     - datebase_mongo
-  #     - datebase_mariadb
-  #     - datebase_mysql
-  #     - schema_redis
+  fedora_ssh:
+    image: registry.gitlab.com/mireu-lab/docker-jupyter-container:containerjupyterfedora
+    restart: always
+    container_name: SSH-Fedora-Container
+    volumes:
+      - Container_SSH:/workspace
+    ports:
+      - "2203:22"
+    depends_on:
+      - datebase_mongo
+      - datebase_mariadb
+      - datebase_mysql
+      - schema_redis
+
+  fedora_ssh:
+    image: registry.gitlab.com/mireu-lab/docker-jupyter-container:containerjupyterfedora
+    restart: always
+    container_name: SSH-Fedora-Container
+    volumes:
+      - Container_SSH:/workspace
+    ports:
+      - "2203:22"
+    depends_on:
+      - datebase_mongo
+      - datebase_mariadb
+      - datebase_mysql
+      - schema_redis
+
+  rockylinux_ssh:
+    image: registry.gitlab.com/mireu-lab/docker-ssh-conteiner:rockylinuxsshcontainer
+    restart: always
+    container_name: SSH-RockyLinux-Container
+    volumes:
+      - Container_SSH:/workspace
+    ports:
+      - "2204:22"
+    depends_on:
+      - datebase_mongo
+      - datebase_mariadb
+      - datebase_mysql
+      - schema_redis
 
   datebase_mongo:
     image: mongo
